# kanbancli

./: CMakeLists.txt  README.md
include/: board.h  board_manager.h  column.h  id_generator.h  input.h  task.h
src/: board.cpp  board_manager.cpp  column.cpp  id_generator.cpp  input.cpp  main.cpp  task.cpp
